# JsonDataViewer

./: README.md  pyproject.toml
scripts/: run.py
src/jsonviewer/: README.md  app.py  cli.py  config.py  json_viewer.py  loader.py  search.py  state.py  wrap.py
src/jsonviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/jsonviewer/ui/: base.py  full_view.py  key_view.py
