[project]
name = "jsonviewer"
version = "0.1.0"
description = "Curses-based streaming JSON list viewer"
authors = [{ name="Your Name", email="you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["ijson>=3.2", "typing-extensions; python_version<'3.11'"]

[project.scripts]
jsonviewer = "jsonviewer.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
