[project]
name = "jsonviewer"
version = "0.1.0"
description = "Curses-based streaming JSON list viewer"
authors = [{ name="Qinwei Ma", email="qinweimartin@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["ijson>=3.2", "typing-extensions", "tomli-w>=1.0.0"]

[project.scripts]
jsonviewer = "jsonviewer.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
